--- a/style.css
+++ b/style.css
@@ -64,10 +64,45 @@ html {
   gap: 0.5rem;
 }
 
+.board__tile__container {
+  width: 5.5rem;
+  height: 5.5rem;
+  perspective: 1000px;
+}
+
+.board__tile__container.flip .board__tile {
+  transform: rotateX(180deg);
+}
 .board__tile {
   width: 5.5rem;
   height: 5.5rem;
+  transform-style: preserve-3d;
+  transition: all 1s ease-in-out;
+  position: relative;
+}
+
+.front,
+.back {
+  height: 100%;
+  width: 100%;
+  position: absolute;
   border: 2px solid #d2d4d9;
+}
+
+.front {
+  background: white;
+  z-index: 2;
+  backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+}
+
+.back {
+  background: green;
+  z-index: 1;
+  transform: rotateX(180deg);
   display: flex;
   justify-content: center;
   align-items: center;
