--- a/style.css
+++ b/style.css
@@ -163,3 +163,64 @@ html {
   width: 3rem;
   height: 3rem;
 }
+
+@keyframes shake {
+  0% {
+    transform: translateX(0rem);
+  }
+
+  20% {
+    transform: translateX(1rem);
+  }
+
+  40% {
+    transform: translateX(-1rem);
+  }
+
+  60% {
+    transform: translateX(1rem);
+  }
+
+  80% {
+    transform: translateX(-1rem);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes jump {
+  0% {
+    transform: translateY(0);
+  }
+
+  25% {
+    transform: translateY(-1rem);
+  }
+
+  50% {
+    transform: translateY(0);
+  }
+
+  75% {
+    transform: translateY(-0.5rem);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+/* ////////////////// */
+/* Introduction Modal */
+/* ////////////////// */
+
+.introduction-modal__container {
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.95);
+  display: none;
+}
