--- a/style.css
+++ b/style.css
@@ -485,7 +485,6 @@ input:checked + .slider:before {
 
 .statistics-modal {
   width: 50rem;
-  height: 36rem;
   background-color: white;
   border-radius: 1rem;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.122);
@@ -516,7 +515,7 @@ input:checked + .slider:before {
 .statistics-modal__title {
   text-align: center;
   font-size: 1.6rem;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
 }
 
 .statistics-modal__stats-container {
@@ -536,8 +535,40 @@ input:checked + .slider:before {
   font-size: 3.6rem;
 }
 
+.statistics-modal__guess-distribution-container {
+  margin: 0 5.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding-bottom: 1rem;
+}
+
 .statistics-modal__stat-description {
   font-size: 1.2rem;
+}
+
+.stastistics-modal__guess-distribution {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.statistics-modal__guess-distribution__number {
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+.statistics-modal__guess-distribution__bar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  color: white;
+  width: 2rem;
+  height: 2rem;
+  background-color: grey;
+  padding: 0 0.5rem 0 0;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
 .statistics-modal__share-and-timer-container {
@@ -590,8 +621,8 @@ input:checked + .slider:before {
 }
 
 .statistics-modal__button__icon {
-  width: 2rem;
-  height: 2rem;
+  width: 2.4rem;
+  height: 2.4rem;
 }
 
 .invisible {
