--- a/style.css
+++ b/style.css
@@ -4,10 +4,24 @@
   box-sizing: border-box;
 }
 
+/* 
+#d2d4d9
+#929397 
+#67686b
+
+New Tile Grey: #3f3f3f
+*/
+
 :root {
-  --color-green: #68a868;
-  --color-green-shade: #6fb26f;
-  --color-yellow: #d0b363;
+  --correct: #68a868;
+  --correct-tint: #6fb26f;
+  --wrong: #d0b363;
+  --primary: #ffffff;
+  --secondary: #131313;
+  --secondary-shadow: #0000001f;
+  --primary-transparent: #ffffff80;
+  --grey-light: #d2d4d9;
+  --grey-dark: #929397;
 }
 
 html {
@@ -17,6 +31,7 @@ html {
 
 body {
   overflow-y: hidden;
+  background-color: var(--primary);
 }
 
 .header {
@@ -29,6 +44,7 @@ body {
 
 .header__title {
   text-align: center;
+  color: var(--secondary);
 }
 
 .header__icon-container__1 {
@@ -48,6 +64,7 @@ body {
 .header__icon {
   width: 3rem;
   height: 3rem;
+  color: var(--secondary);
 }
 
 .header__icon:hover {
@@ -80,7 +97,7 @@ body {
 }
 
 .message {
-  background-color: black;
+  background-color: var(--secondary);
   text-align: center;
   top: 20%;
   left: 50%;
@@ -93,7 +110,7 @@ body {
 }
 
 .message-text {
-  color: white;
+  color: var(--primary);
   font-size: 1.8rem;
   font-weight: 700;
 }
@@ -118,6 +135,7 @@ body {
   transform-style: preserve-3d;
   transition: all 1s ease-in-out;
   position: relative;
+  color: var(--secondary);
 }
 
 .front,
@@ -129,19 +147,17 @@ body {
 }
 
 .front {
-  background: white;
+  background: var(--primary);
   z-index: 2;
   backface-visibility: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 3rem;
-  border: 2px solid #d2d4d9;
-  /* border: 2px solid #929397; */
+  border: 2px solid var(--grey-light);
 }
 
 .back {
-  background: green;
   z-index: 1;
   transform: rotateX(180deg);
   display: flex;
@@ -168,8 +184,9 @@ body {
   height: 5.8rem;
   border: none;
   border-radius: 0.5rem;
-  background-color: #d2d4d9;
+  background-color: var(--grey-light);
   font-weight: 600;
+  color: var(--secondary);
 }
 
 .keyboard__button:hover {
@@ -185,7 +202,7 @@ body {
   align-items: center;
   border: none;
   border-radius: 0.5rem;
-  background-color: #d2d4d9;
+  background-color: var(--grey-light);
 }
 
 .keyboard__button--enter:hover,
@@ -269,7 +286,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100vh;
-  background-color: rgba(255, 255, 255);
+  background-color: var(--primary);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -293,11 +310,13 @@ body {
 .rules-modal__header,
 .settings-modal__header {
   position: relative;
+  color: var(--secondary);
 }
 
 .rules-modal__title,
 .settings-modal__title {
   text-align: center;
+  color: var(--secondary);
 }
 
 .rules-modal__close-icon,
@@ -308,6 +327,7 @@ body {
   transform: translateY(-50%);
   width: 3rem;
   height: 3rem;
+  color: var(--secondary);
 }
 
 .rules-modal__close-icon:hover,
@@ -318,21 +338,25 @@ body {
 .rules-modal__intro {
   border-bottom: 0.5px solid grey;
   padding-top: 2rem;
+  color: var(--secondary);
 }
 
 .settings-modal__intro {
   padding-top: 2rem;
+  color: var(--secondary);
 }
 
 .rules-modal__intro__text {
   padding-bottom: 1.5rem;
   font-size: 1.4rem;
+  color: var(--secondary);
 }
 
 .rules-modal__examples {
   padding-top: 2rem;
   padding-bottom: 3rem;
   border-bottom: 0.5px solid grey;
+  color: var(--secondary);
 }
 
 .example {
@@ -361,10 +385,11 @@ body {
   position: relative;
   transition: all 0.4s linear;
   transform-style: preserve-3d;
+  background-color: var(--primary);
 }
 
 .front-border {
-  border: 2px solid #d2d4d9;
+  border: 2px solid var(--grey-dark);
 }
 
 .example__front,
@@ -375,10 +400,10 @@ body {
 }
 
 .example__front {
-  background: white;
+  background: var(--primary);
   z-index: 10;
   backface-visibility: hidden;
-  border: 2px solid #d2d4d9;
+  border: 2px solid var(--grey-light);
 }
 
 .example__back {
@@ -386,16 +411,16 @@ body {
   justify-content: center;
   align-items: center;
   z-index: 9;
-  color: white;
+  color: var(--primary);
   border: none;
   transform: rotateX(180deg);
 }
 
 .example__back--green {
-  background: var(--color-green);
+  background: var(--correct);
 }
 .example__back--yellow {
-  background: var(--color-yellow);
+  background: var(--wrong);
 }
 .example__back--grey {
   background: grey;
@@ -413,6 +438,7 @@ body {
   padding-top: 2rem;
   font-size: 1.4rem;
   font-weight: 700;
+  color: var(--secondary);
 }
 
 .settings-modal__section {
@@ -426,11 +452,13 @@ body {
 .settings-modal__section__title {
   font-size: 2rem;
   font-weight: 400;
+  color: var(--secondary);
 }
 
 .settings-modal__section__description {
   font-size: 1.2rem;
   color: grey;
+  color: var(--secondary);
 }
 
 .switch {
@@ -473,11 +501,11 @@ body {
 }
 
 input:checked + .slider {
-  background-color: var(--color-green);
+  background-color: var(--correct);
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 0.1rem var(--color-green);
+  box-shadow: 0 0 0.1rem var(--correct);
 }
 
 input:checked + .slider:before {
@@ -491,7 +519,7 @@ input:checked + .slider:before {
   position: absolute;
   width: 100%;
   height: 100vh;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: var(--primary-transparent);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -500,9 +528,9 @@ input:checked + .slider:before {
 
 .statistics-modal {
   width: 50rem;
-  background-color: white;
+  background-color: var(--primary);
   border-radius: 1rem;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.122);
+  box-shadow: 0 0 10px 5px #0000001f;
   padding: 1rem;
   margin-top: 2rem;
   transition: all 0.2s linear;
@@ -521,6 +549,7 @@ input:checked + .slider:before {
 .statistics-modal__close-icon {
   width: 3rem;
   height: 3rem;
+  color: var(--secondary);
 }
 
 .statistics-modal__close-icon:hover {
@@ -531,6 +560,7 @@ input:checked + .slider:before {
   text-align: center;
   font-size: 1.6rem;
   padding-bottom: 1rem;
+  color: var(--secondary);
 }
 
 .statistics-modal__stats-container {
@@ -548,6 +578,7 @@ input:checked + .slider:before {
 
 .statistics-modal__stat {
   font-size: 3.6rem;
+  color: var(--secondary);
 }
 
 .statistics-modal__guess-distribution-container {
@@ -560,6 +591,7 @@ input:checked + .slider:before {
 
 .statistics-modal__stat-description {
   font-size: 1.2rem;
+  color: var(--secondary);
 }
 
 .stastistics-modal__guess-distribution {
@@ -571,6 +603,7 @@ input:checked + .slider:before {
 .statistics-modal__guess-distribution__number {
   font-size: 1.4rem;
   font-weight: 500;
+  color: var(--secondary);
 }
 
 .statistics-modal__guess-distribution__bar {
@@ -605,11 +638,13 @@ input:checked + .slider:before {
 .statistics-modal__next-werdle {
   font-size: 1.6rem;
   font-weight: 700;
+  color: var(--secondary);
 }
 
 .statistics-modal__time {
   font-size: 3.6rem;
   letter-spacing: 0.2rem;
+  color: var(--secondary);
 }
 
 .statistics-modal__share-button-container {
@@ -621,7 +656,7 @@ input:checked + .slider:before {
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  background-color: var(--color-green);
+  background-color: var(--correct);
   color: white;
   border: none;
   border-radius: 0.5rem;
@@ -632,7 +667,7 @@ input:checked + .slider:before {
 
 .statistics-modal__share-button:hover {
   cursor: pointer;
-  background-color: var(--color-green-shade);
+  background-color: var(--correct-tint);
 }
 
 .statistics-modal__share-button__icon {
