enable keyboard colors to persists across dark mode switch

--- a/style.css
+++ b/style.css
@@ -411,7 +411,7 @@ body {
   justify-content: center;
   align-items: center;
   z-index: 9;
-  color: var(--primary);
+  color: white;
   border: none;
   transform: rotateX(180deg);
 }
