--- a/querries.css
+++ b/querries.css
@@ -1,7 +1,31 @@
-@media (max-width: 33em) {
-  .keyboard__button {
-    width: 3rem;
-    height: 4.5rem;
+@media (max-width: 30em) {
+  .header {
+    font-size: 1.2rem;
+  }
+
+  .header__icon-container__1,
+  .header__icon-container__2 {
+    top: 0.5rem;
+  }
+
+  .header__icon {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
+@media (max-width: 24rem) {
+  .header {
     font-size: 1rem;
+  }
+
+  .header__icon-container__1,
+  .header__icon-container__2 {
+    top: 0.5rem;
+  }
+
+  .header__icon-container__1,
+  .header__icon-container__2 {
+    top: 0.3rem;
   }
 }
