--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: var(--grey-light);
   -webkit-transition: 0.4s;
   transition: 0.4s;
   border-radius: 3.4rem;
